tests/classes/classes.exp
A.js:2
  2:   foo(x:number):void { }
             ^^^^^^ number. This type is incompatible with the expected param type of
  4:   foo(x:string):void { }
             ^^^^^^ string. See: C.js:4

B.js:6
  6: (b.foo: number); // error, number !~> function
      ^^^^^ property `foo`. This type is incompatible with
  6: (b.foo: number); // error, number !~> function
             ^^^^^^ number

C.js:8
  8: (c.foo: number); // error, number !~> function
      ^^^^^ property `foo`. This type is incompatible with
  8: (c.foo: number); // error, number !~> function
             ^^^^^^ number

D.js:3
  3: new E().x
             ^ property `x`. Property not found in
  3: new E().x
     ^^^^^^^ E

class_shapes.js:4
  4:   a: string;    // exists in TestClass
          ^^^^^^ string. This type is incompatible with
 27:   a: number;  // conflicts with cast to Foo
          ^^^^^^ number

class_shapes.js:5
  5:   b: string;    // doesn't exist
          ^^^^^^ string. This type is incompatible with
 31:   b: number;  // conflicts with cast to Foo
          ^^^^^^ number

class_shapes.js:6
  6:   c?: ?string;  // exists in TestClass, optional
            ^^^^^^ string. This type is incompatible with
 28:   c: ?number; // conflicts with cast to Foo
           ^^^^^^ number

class_shapes.js:18
 18: x.b; // error, TestClass has no b
       ^ property `b`. Property not found in
 18: x.b; // error, TestClass has no b
     ^ TestClass

class_shapes.js:20
 20: x.d; // error, TestClass has no d
       ^ property `d`. Property not found in
 20: x.d; // error, TestClass has no d
     ^ TestClass

class_shapes.js:22
 22: var y : Foo = x;
             ^^^ property `b`. Property not found in
 22: var y : Foo = x;
                   ^ TestClass

class_shapes.js:27
 27:   a: number;  // conflicts with cast to Foo
          ^^^^^^ number. This type is incompatible with
  4:   a: string;    // exists in TestClass
          ^^^^^^ string

class_shapes.js:28
 28:   c: ?number; // conflicts with cast to Foo
           ^^^^^^ number. This type is incompatible with
  6:   c?: ?string;  // exists in TestClass, optional
            ^^^^^^ string

class_shapes.js:31
 31:   b: number;  // conflicts with cast to Foo
          ^^^^^^ number. This type is incompatible with
  5:   b: string;    // doesn't exist
          ^^^^^^ string

expr.js:14
 14: var b = new Baz(); // error: Baz is not a runtime binding in this scope
                 ^^^ identifier `Baz`. Could not resolve name

expr.js:17
 17: var c: Qux = new C(); // error: Qux is not a type in this scope
            ^^^ identifier `Qux`. Could not resolve name

expr.js:29
 29: var alias1: Alias = new _Alias(); // error: bad pun
                         ^^^^^^^^^^^^ class expr `Alias`. This type is incompatible with
 29: var alias1: Alias = new _Alias(); // error: bad pun
                 ^^^^^ Alias

expr.js:30
 30: var alias2: Alias = _Alias.factory(); // error: bad pun
                         ^^^^^^^^^^^^^^^^ class expr `Alias`. This type is incompatible with
 30: var alias2: Alias = _Alias.factory(); // error: bad pun
                 ^^^^^ Alias

loc.js:5
  5: class Foo {} // error, shadows type Foo
           ^^^ Foo. name is already bound
  3: type Foo = number
          ^^^ type Foo

statics.js:4
  4:   static p: string;
                 ^^^^^^ string. This type is incompatible with
 10: (C: {p:number}); // errors, string ~> number & vice versa (unify)
            ^^^^^^ number

statics.js:10
 10: (C: {p:number}); // errors, string ~> number & vice versa (unify)
            ^^^^^^ number. This type is incompatible with
  4:   static p: string;
                 ^^^^^^ string

statics.js:13
 13: (o: Class<C>); // error, object type incompatible with class type
      ^ object type. This type is incompatible with
 13: (o: Class<C>); // error, object type incompatible with class type
               ^ class type: C


Found 21 errors
